# HEST

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: python-app.yml
bench_config/: bench_config.yaml
docs/source/: api.md  conf.py  index.md  installation.md  tutorials.md
src/hest/: HESTData.py  SlideReaderAdapter.py  __init__.py  autoalign.py  batch_effect.py  path_utils.py  pipeline.py  readers.py  registration.py  trident_compat.py  utils.py
src/hest/bench/: benchmark.py  local_ckpts.json  st_dataset.py  trainer.py
src/hest/bench/cpath_model_zoo/: inference_models.py
src/hest/bench/cpath_model_zoo/conchv1_5/: conchv1_5.py
src/hest/io/: seg_readers.py
src/hest/segmentation/: cell_segmenters.py
tests/: hest_tests.py
tutorials/: 1-Downloading-HEST-1k.ipynb  2-Interacting-with-HEST-1k.ipynb  3-Assembling-HEST-Data.ipynb  4-Running-HEST-Benchmark.ipynb  5-Batch-effect-visualization.ipynb
tutorials/scripts/: 1_process_raw_samples.py  2_check_xenium_alignment.py  3a_microalign_xenium.py  3b_microalign_xenium.py  4_segment_cellvit.py  5_copy_processed.py  6_generate_new_meta.py  7_upload_huggingface.py
