[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hest"
version = "1.1.2"
authors = [
  { name="Paul Doucet", email="homedoucetpaul@gmail.com" },
  { name="Guillaume Jaume", email="guillaume.jaume@unil.ch" },
]                            
dependencies = [
    "ultralytics >= 8.2.4",
    "pyvips >= 2.2.3",
    "scanpy >= 1.10.1",
    "imagecodecs >= 2024.1.1",
    "loguru >= 0.7.2",
    "timm >= 0.9.16",
    "transformers >= 4.40.2, < 5",
    "pytorch-lightning >= 2.2.4",
    "openslide-python >= 1.3.1",
    "einops",
    "einops-exts",
    "pyarrow >= 16.1.0",
    "spatialdata >= 0.6.1",
    "dask[complete] >= 2024.2.1",
    "spatial_image >= 1.2.3",
    "mygene",
    "trident @ git+https://github.com/mahmoodlab/TRIDENT.git"
]

requires-python = ">=3.11"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]

[project.optional-dependencies]
benchmark = [
    "trident[patch-encoders] @ git+https://github.com/mahmoodlab/TRIDENT.git",
]
docs = [
    "myst-nb",
    "sphinx-design",
    "sphinx-rtd-theme == 2.0.0",
    "furo",
]